adds console messages to html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>mtm-6302 week 2</h1>
     <p>Look into the console for JS messages</p>
+    <script>
+        console.log("MTM6302 HTML script responding")
+    </script>
+    <!--best method to link js when writing more than a couple lines of js-->
+    <script src="js/main.js"></script>
 </body>
 </html>
